test/libsolidity/syntaxTests/using/global_for_non_user_defined.sol
using {f} for uint global;
function f(uint) pure{}
// ----
// TypeError 8841: (0-26): Can only use "global" with user-defined types.
